--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Добавил для адаптивности -->
     <title>ShiftCode</title>
     <style>
         /* Основные стили */
@@ -24,7 +25,7 @@
         h1 {
             color: #10a37f;
             margin-bottom: 20px;
-            font-size: 1.8em;
+            font-size: 2em; /* Увеличил размер заголовка для больших экранов */
             font-weight: bold;
             text-align: center;
         }
@@ -39,7 +40,7 @@
         /* Стили полей и кнопок */
         input, textarea {
             width: 100%;
-            max-width: 500px;
+            max-width: 100%; /* Заменил на 100% для адаптивности */
             padding: 12px;
             margin: 10px 0;
             border: none;
@@ -65,6 +66,7 @@
             transition: background-color 0.3s;
             margin: 5px;
             font-family: Arial, sans-serif;
+            width: 100%; /* Сделал кнопку шириной 100% */
         }
         button:hover {
             background-color: #10a37f;
@@ -79,6 +81,31 @@
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Медиа-запросы для мобильных устройств */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.5em; /* Уменьшаем заголовок на мобильных */
+            }
+            button {
+                font-size: 1em; /* Уменьшаем размер шрифта для кнопок на мобильных */
+            }
+            input, textarea {
+                font-size: 1em; /* Уменьшаем размер шрифта для инпутов на мобильных */
+            }
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 1.8em; /* Уменьшаем заголовок для планшетов */
+            }
+            button {
+                font-size: 1.1em; /* Размер шрифта для кнопок на планшетах */
+            }
+            input, textarea {
+                font-size: 1.1em; /* Размер шрифта для инпутов на планшетах */
+            }
         }
     </style>
 </head>
